Fixed link spacing

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -55,6 +55,10 @@ a {
 	color: #000;
 }
 
+.link {
+	margin: 80px 0;
+}
+
 .pic-container {
 	display: flex;
 	flex-direction: column;
